--- a/twemcache/DEBIAN/control
+++ b/twemcache/DEBIAN/control
@@ -4,5 +4,5 @@ Section: web
 Maintainer: Micael Malta <mmicael@gmail.com>
 Architecture: amd64
 Version: 2.6.0
-Depends: libc6 (>= 2.17), libevent-2.0-5 (>= 2.0.10-stable), libsasl2-2 (>= 2.1.24), perl, lsb-base (>= 3.2-13), adduser
+Depends: libc6 (>= 2.4), libevent-2.0-5 (>= 2.0.10-stable), libsasl2-2 (>= 2.1.24), perl, lsb-base (>= 3.2-13)
 Description: Twemcache (pronounced "two-em-cache") is the Twitter Memcached. Twemcache is based on a fork of Memcached v.1.4.4 that has been heavily modified to make to suitable for the large scale production environment at Twitter.
